language/move-lang/tests/move_check/expansion/use_function_tparam_shadows.move
address 0x2 {
module X {
    fun foo() {}
}

module M {
    use 0x2::X::foo;

    fun bar<foo>() {
        foo()
    }
}
}
